mace_mha/mace_lr_119511.out
/trace/group/mcgaughey/hariharr/miniconda3/envs/mace/lib/python3.9/site-packages/e3nn/o3/_wigner.py:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.
  _Jd, _W3j_flat, _W3j_indices = torch.load(os.path.join(os.path.dirname(__file__), 'constants.pt'))
Traceback (most recent call last):
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/./mace/cli/run_train.py", line 26, in <module>
    from mace.calculators.foundations_models import mace_mp, mace_off
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/mace/calculators/__init__.py", line 1, in <module>
    from .foundations_models import mace_anicc, mace_mp, mace_off
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/mace/calculators/foundations_models.py", line 10, in <module>
    from .mace import MACECalculator
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/mace/calculators/mace.py", line 18, in <module>
    from mace.modules.utils import extract_invariant
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/mace/modules/__init__.py", line 33, in <module>
    from .models import (
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/mace/modules/models.py", line 14, in <module>
    from .ewald_mace import EwaldPotential
  File "/trace/group/mcgaughey/hariharr/mace_exploration/fourier_attention_mace/mace_mha/mace/modules/ewald_mace.py", line 87
    k_pot = self.compute_potential_optimized(r[mask], k_vector, box[i], 'k')
    ^
IndentationError: expected an indented block
